# xfce4-pulseaudio-plugin

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac.in
icons/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
icons/scalable/apps/: Makefile.am
icons/scalable/status/: Makefile.am
panel-plugin/: Makefile.am  pulseaudio-button.c  pulseaudio-button.h  pulseaudio-config.c  pulseaudio-config.h  pulseaudio-debug.c  pulseaudio-debug.h  pulseaudio-dialog.c  pulseaudio-dialog.glade  pulseaudio-dialog.h  pulseaudio-menu.c  pulseaudio-menu.h  pulseaudio-notify.c  pulseaudio-notify.h  pulseaudio-plugin.c  pulseaudio-plugin.h  pulseaudio-volume.c  pulseaudio-volume.h  pulseaudio.desktop.in.in  scalemenuitem.c
po/: POTFILES.in  POTFILES.skip
